# dbt-jaffle-shop

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  catalog.json  compose.yaml  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  profiles.yml  pyproject.toml  requirements.txt  run_results.json  semantic_manifest.json
.github/workflows/: dbt_docs_deploy.yml
compiled/jaffle_shop/models/marts/: locations.sql  metricflow_time_spine.sql  products.sql  supplies.sql
compiled/jaffle_shop/models/marts/sales/: customers.sql  order_items.sql  orders.sql
compiled/jaffle_shop/models/staging/jaffle_shop/: stg_jaffle_shop__locations.sql  stg_jaffle_shop__order_items.sql  stg_jaffle_shop__orders.sql  stg_jaffle_shop__products.sql  (+1 more)
jaffle_shop/: dbt_project.yml  packages.yml
jaffle_shop/docs/: homepage.md
jaffle_shop/models/marts/: locations.yml  order_items.sql  orders.sql  products.yml  supplies.yml
jaffle_shop/models/marts/sales/: customers.sql  customers.yml  order_items.sql  order_itens.yml  orders.sql  orders.yml
jaffle_shop/models/staging/: __models.yml  __sources.yml  stg_locations.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_supplies.sql  unit_tests.yml
jaffle_shop/models/staging/jaffle_shop/: _jaffle_shop__docs.md  _jaffle_shop__models.yml  _jaffle_shop__sources.yml  _jaffle_shop__unit_tests.yml  stg_jaffle_shop__locations.sql  stg_jaffle_shop__order_items.sql  stg_jaffle_shop__orders.sql  stg_jaffle_shop__products.sql  stg_jaffle_shop__supplies.sql
jaffle_shop/seeds/: __seeds.yml
(+29 files in other folders)
